--- a/login.html
+++ b/login.html
@@ -1,15 +1,49 @@
 <!-- login.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Login - Finance Point</title>
   <meta charset="UTF-8" />
+  <title>Login - Finance Point</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 
-  <!-- Firebase SDKs -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.10.0/firebase-auth-compat.js"></script>
+</head>
+<body>
+  <div id="particles-js"></div>
 
+  <div class="login-container">
+    <div class="login-box">
+      <h2>Finance Point Login</h2>
+
+      <form id="login-form">
+        <input type="email" id="email" placeholder="Email" required />
+        <input type="password" id="password" placeholder="Password" required />
+        <button type="submit">Login</button>
+      </form>
+
+      <p class="link" id="show-email-link">🔁 Login with email link</p>
+      <form id="email-link-form" style="display: none;">
+        <input type="email" id="link-email" placeholder="Your Email" required />
+        <button type="submit">Send Login Link</button>
+      </form>
+
+      <p class="link" id="forgot">Forgot Password?</p>
+      <form id="reset-form" style="display: none;">
+        <input type="email" id="reset-email" placeholder="Your Email" required />
+        <button type="submit">Send Reset Email</button>
+      </form>
+
+      <p class="switch">Don't have an account? <a href="signup.html">Sign Up</a></p>
+      <p id="message"></p>
+    </div>
+  </div>
+
+  <!-- Firebase Config + Logic -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
@@ -22,38 +56,8 @@
 
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
-  </script>
-</head>
-<body>
-  <h2>Login</h2>
 
-  <!-- Email + Password Login -->
-  <form id="login-form">
-    <input type="email" id="email" placeholder="Email" required /><br />
-    <input type="password" id="password" placeholder="Password" required /><br />
-    <button type="submit">Login</button>
-  </form>
-
-  <!-- OR -->
-  <p>OR</p>
-
-  <!-- Email Link Login -->
-  <form id="link-login-form">
-    <input type="email" id="link-email" placeholder="Email for OTP Link" required /><br />
-    <button type="submit">Send Login Link</button>
-  </form>
-
-  <!-- Forgot Password -->
-  <p>Forgot your password?</p>
-  <form id="reset-form">
-    <input type="email" id="reset-email" placeholder="Email to Reset Password" required /><br />
-    <button type="submit">Send Reset Link</button>
-  </form>
-
-  <p id="message"></p>
-
-  <script>
-    // Email + Password login
+    // Login with email & password
     document.getElementById("login-form").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value;
@@ -62,61 +66,71 @@
       try {
         await auth.signInWithEmailAndPassword(email, password);
         document.getElementById("message").innerText = "Login successful!";
-        // Redirect to dashboard if needed
-        // window.location.href = "dashboard.html";
+        window.location.href = "dashboard.html";
       } catch (error) {
         document.getElementById("message").innerText = error.message;
       }
     });
 
-    // Email Link Login (OTP-style)
-    document.getElementById("link-login-form").addEventListener("submit", async (e) => {
+    // OTP-style email login
+    document.getElementById("email-link-form").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("link-email").value;
-
       const actionCodeSettings = {
-        url: "https://financepoint.netlify.app/login.html", // Replace with your actual domain
-        handleCodeInApp: true,
+        url: "https://financepoint.netlify.app/login.html",
+        handleCodeInApp: true
       };
 
       try {
         await auth.sendSignInLinkToEmail(email, actionCodeSettings);
         window.localStorage.setItem("emailForSignIn", email);
-        document.getElementById("message").innerText = "Login link sent to your email.";
+        document.getElementById("message").innerText = "Login link sent to your email!";
       } catch (error) {
         document.getElementById("message").innerText = error.message;
       }
     });
 
-    // Handle email link if clicked
+    // Handle email login redirect
     if (auth.isSignInWithEmailLink(window.location.href)) {
       let email = window.localStorage.getItem("emailForSignIn");
       if (!email) {
-        email = window.prompt("Please enter your email again to confirm.");
+        email = window.prompt("Please enter your email again:");
       }
 
       auth.signInWithEmailLink(email, window.location.href)
         .then(() => {
-          document.getElementById("message").innerText = "Logged in with email link!";
-          // window.location.href = "dashboard.html";
+          window.localStorage.removeItem("emailForSignIn");
+          document.getElementById("message").innerText = "Logged in via link!";
+          window.location.href = "dashboard.html";
         })
-        .catch((error) => {
+        .catch(error => {
           document.getElementById("message").innerText = error.message;
         });
     }
 
-    // Forgot Password
+    // Password reset
     document.getElementById("reset-form").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("reset-email").value;
 
       try {
         await auth.sendPasswordResetEmail(email);
-        document.getElementById("message").innerText = "Password reset email sent.";
+        document.getElementById("message").innerText = "Password reset email sent!";
       } catch (error) {
         document.getElementById("message").innerText = error.message;
       }
     });
+
+    // Toggle forms
+    document.getElementById("show-email-link").addEventListener("click", () => {
+      document.getElementById("email-link-form").style.display = "block";
+    });
+
+    document.getElementById("forgot").addEventListener("click", () => {
+      document.getElementById("reset-form").style.display = "block";
+    });
   </script>
+
+  <script src="particles-config.js"></script>
 </body>
 </html>
